Fixed nested attachments and some QoL improvements
Added hot-reload plugin in test vault
Added justfile for easier dev
Fixed the attachment finding code so it searches for nested attachments, also little general cleanup
Fixed messed up positioning of buttons in trash modal, changed label on copy to clipboard button to be more clear
Added a link to the root directory of repository so the test-vault already has the plugin preinstalled

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 .trash-modal-button {
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+/* this is the confirm button so it should be separated */
+.trash-modal-button:last-of-type {
     float: right;
 }
 
@@ -9,7 +15,6 @@
 }
 
 .trash-modal-link {
-    line-height: 10px;
     color: var(--text-accent);
     text-decoration: underline;
     cursor: pointer;
